force-app/main/default/objects/Email_Scheduler__c/Email_Scheduler__c.object-meta.xml
<CustomObject>
    <label>Email Scheduler</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Email Scheduler Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>