force-app/main/default/objects/Email_Scheduler__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck this box to block the Email From sending</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>