force-app/main/default/objects/Email_Scheduler__c/fields/Booking_Form__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Form</label>
    <referenceTo>Booking_Form__c</referenceTo>
    <relationshipLabel>Email Schedulers</relationshipLabel>
    <relationshipName>Email_Schedulers</relationshipName>
    <type>Lookup</type>
</CustomField>