force-app/main/default/objects/Email_Scheduler__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Schedulers</relationshipLabel>
    <relationshipName>Email_Schedulers</relationshipName>
    <type>Lookup</type>
</CustomField>