force-app/main/default/objects/Email_Scheduler__c/fields/Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Date__c</fullName>
    <description>Currently set to the first Monday after the createdDate</description>
    <formula>DATETIMEVALUE(
  TEXT(
    YEAR(
      Booking_Form__r.Date_of_Performance__c + CASE(
        MOD(Booking_Form__r.Date_of_Performance__c - DATE(1900, 1, 8), 7),
        0, 1,  /* If Monday, add 1 day */
        1, 6,  /* If Tuesday, add 6 days */
        2, 5,  /* If Wednesday, add 5 days */
        3, 4,  /* If Thursday, add 4 days */
        4, 3,  /* If Friday, add 3 days */
        5, 2,  /* If Saturday, add 2 days */
        6, 1,  /* If Sunday, add 1 day */
        0      /* Default value */
      )
    )
  ) &amp; &quot;-&quot; &amp;
  TEXT(
    MONTH(
      Booking_Form__r.Date_of_Performance__c + CASE(
        MOD(Booking_Form__r.Date_of_Performance__c - DATE(1900, 1, 8), 7),
        0, 1,
        1, 6,
        2, 5,
        3, 4,
        4, 3,
        5, 2,
        6, 1,
        0
      )
    )
  ) &amp; &quot;-&quot; &amp;
  TEXT(
    DAY(
      Booking_Form__r.Date_of_Performance__c + CASE(
        MOD(Booking_Form__r.Date_of_Performance__c - DATE(1900, 1, 8), 7),
        0, 1,
        1, 6,
        2, 5,
        3, 4,
        4, 3,
        5, 2,
        6, 1,
        0
      )
    )
  ) &amp; &quot; &quot; &amp; &quot;08:00:00&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Date</label>
    <type>DateTime</type>
</CustomField>